--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,4 +41,5 @@ stages:
       inputs:
        appName: $(WebAppName)
        azureSubscription: 'Resource Manager - Tailspin - Space Game'
+       resourceGroupName: 'tailspin-space-game-rg'
        imageName: $(RegistryName)/$(webRepository):$(build.buildId)
