--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,28 +18,11 @@ stages:
     - task: Docker@2
       displayName: 'Build and push the image to container registry'
       inputs:
-        command: buildAndPush
+        command: build
         buildContext: $(Build.Repository.LocalPath)
         repository: $(webRepository)
         dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
         containerRegistry: 'Container Registry Connection'
         tags: |
           $(tag)
-  
-- stage: 'Deploy'
-  displayName: 'Deploy the container'
-  dependsOn: Build
-  jobs:
-  - job: 'Deploy'
-    displayName: 'Deploy job'
-    pool:
-      vmImage: 'ubuntu-18.04'
-    variables:
-    - group: Release
-    steps:
-    - task: AzureWebAppContainer@1
-      inputs:
-       appName: $(WebAppName)
-       azureSubscription: 'Resource Manager - Tailspin - Space Game'
-       resourceGroupName: 'tailspin-space-game-rg'
-       imageName: $(RegistryName)/$(webRepository):$(build.buildId)
+
